Add Gradle support.